--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ android {
             dimension "tier"
         }
     }
+    sourceSets { main { java.srcDirs = ['src/main/java', 'src/endPointTest'] } }
 }
 
 dependencies {
@@ -58,7 +59,7 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     endpointsServer project(path: ':backend', configuration: 'endpoints')
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.google.android.gms:play-services-ads:11.8.0'
+    freeImplementation 'com.google.android.gms:play-services-ads:11.8.0'
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.1'
